<resources>
    <string name="app_name">Qariz Daptershesi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email_not_entered_error">Please, enter your Email address</string>
    <string name="enter_your_password_error">Please, Enter your password</string>
    <string name="enter_amount">"Please, enter the amount"</string>
    <string name="enter_number">"Please, enter the number"</string>
    <string name="enter_name">"Please, enter the name"</string>
    <string name="todo">TODO</string>
    <string name="spisok">Dizim</string>
    <string name="sms">SMS</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="selectLanguage">Select language</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="sum">Sum</string>
    <string name="add">Add</string>
    <string name="comment">Comment</string>
    <string name="get_time">Get time:</string>
    <string name="set_time">Set time:</string>
    <string name="count_months">Count months:</string>
    <string name="all">All:</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="Required">Required*</string>
    <string name="google_icon">google icon</string>
    <string name="sign_in">Sign in:</string>
    <string name="turnOn">Do turn on Internet</string>
    <string name="history">History</string>
    <string name="changeSum">Change balance</string>
    <string name="Rename">Rename</string>
    <string name="delete_contact">DeleteContact</string>
    <string name="exit_from_account">Exit from account</string>
    <string name="message_exit">Do you really exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Loading">Loading...</string>
    <string name="Success">Success</string>
    <string name="russian_language">русский язык</string>
    <string name="karakalpak_language">Каракалпакский</string>
    <string name="uzbek_language">Узбекский</string>
    <string name="change_language">Выбор языка</string>
    <string name="date">Date:</string>

    <string-array name="languages">
        <item>Qaraqalpaqsha</item>
        <item>Русский</item>
    </string-array>
</resources>