<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.auth.signIn.SignInFragment">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivPerson"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/standard_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_person"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="48dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ivPerson"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:background="@drawable/wave"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvInputLayoutLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/login"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:helperText="@string/Required"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:startIconDrawable="@drawable/ic_person"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="26"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvInputLayoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        app:helperText="@string/Required"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:startIconDrawable="@drawable/ic_lock"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@id/tvInputLayoutLogin"
        app:layout_constraintEnd_toEndOf="@id/tvInputLayoutLogin"
        app:layout_constraintTop_toBottomOf="@id/tvInputLayoutLogin">

        <EditText
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:pb_colorComplete="@color/green_complete"
        app:pb_colorNormal="@color/blue_normal"
        app:pb_colorPressed="@color/blue_pressed"
        app:pb_colorProgress="@color/purple_progress"
        app:pb_textComplete="@string/Success"
        app:pb_textProgress="@string/Loading"
        app:pb_textError="Error"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInputLayoutPassword" />


    <TextView
        android:id="@+id/tvGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/googleLogin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/tvGoogle"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/standard_margin"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:srcCompat="@drawable/google"
            android:contentDescription="@string/google_icon" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ic_wave_bottom"/>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading"
        android:layout_width="64dp"
        android:layout_height="64dp"
        style="@style/AVLoadingIndicatorView"
        android:visibility="invisible"
        app:indicatorName="BallPulseSyncIndicator"
        app:indicatorColor="@color/blue_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>