<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.auth.signUp.SignUpFragment">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivPerson"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/standard_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_person_add"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="54dp"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ivPerson"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@id/view2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvInputLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/login"
        app:helperText="@string/Required"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:startIconDrawable="@drawable/ic_person"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@android:color/holo_red_light"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2">

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="26"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/tvInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:helperText="@string/Required"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/tvInputLayoutLogin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:text="@string/registration"
        android:textColor="@color/white"
        app:pb_colorComplete="@color/green_complete"
        app:pb_colorNormal="@color/blue_normal"
        app:pb_colorPressed="@color/blue_pressed"
        app:pb_colorProgress="@color/purple_progress"
        app:pb_textComplete="@string/Success"
        app:pb_textProgress="@string/Loading"
        app:pb_textError="Error"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInputLayoutPassword" />

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ic_wave_bottom_2"/>

</androidx.constraintlayout.widget.ConstraintLayout>