<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvInputLayoutName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:helperText="Required*"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp">

        <AutoCompleteTextView
            android:id="@+id/actvName"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvInputLayoutSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:helperText="Required*"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:startIconDrawable="@drawable/ic_calculate"
        app:endIconMode="clear_text"
        android:hint="@string/sum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInputLayoutName">

        <EditText
            android:id="@+id/etSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivSetData"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@id/tvInputLayoutSum"
        app:layout_constraintEnd_toStartOf="@id/setData"
        app:layout_constraintTop_toTopOf="@id/setData"
        app:layout_constraintBottom_toBottomOf="@id/setData"
        android:src="@drawable/ic_today"
        android:paddingStart="@dimen/little_standard_margin"
        android:paddingEnd="4dp"
        android:paddingTop="@dimen/little_standard_margin"
        android:paddingBottom="@dimen/little_standard_margin"
        android:layout_marginEnd="4dp"/>

    <TextView
        android:id="@+id/setData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivSetData"
        app:layout_constraintEnd_toEndOf="@id/tv_set_date"
        app:layout_constraintTop_toBottomOf="@id/tvInputLayoutSum"
        android:hint="@string/get_time"
        android:textSize="18sp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tv_set_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/setData"
        app:layout_constraintEnd_toEndOf="@id/tvInputLayoutSum"
        app:layout_constraintTop_toBottomOf="@id/tvInputLayoutSum"
        android:textSize="18sp"
        android:paddingStart="@dimen/little_standard_margin"
        android:textStyle="bold"
        android:layout_marginTop="24dp"/>

    <ImageView
        android:id="@+id/ivGetData"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_today"
        app:layout_constraintStart_toStartOf="@id/ivSetData"
        app:layout_constraintEnd_toStartOf="@id/getData"
        app:layout_constraintTop_toTopOf="@id/getData"
        app:layout_constraintBottom_toBottomOf="@id/getData"
        android:paddingStart="@dimen/little_standard_margin"
        android:paddingEnd="4dp"
        android:paddingTop="@dimen/little_standard_margin"
        android:paddingBottom="@dimen/little_standard_margin"
        android:layout_marginEnd="4dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/getData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:hint="@string/set_time"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/getData"
        app:layout_constraintStart_toEndOf="@id/ivGetData"
        app:layout_constraintTop_toBottomOf="@id/tv_set_date" />

    <TextView
        android:id="@+id/tv_get_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingStart="@dimen/little_standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintStart_toEndOf="@id/getData"
        app:layout_constraintEnd_toEndOf="@id/tv_set_date"
        app:layout_constraintTop_toBottomOf="@id/tv_set_date"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvInputLayoutPhoneNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:startIconDrawable="@drawable/ic_phone"
        android:layout_height="wrap_content"
        app:prefixText="+998 "
        android:hint="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:counterEnabled="true"
        app:counterMaxLength="9"
        app:helperText="Required*"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@id/getData">

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvInputLayoutComment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_add_comment"
        app:endIconMode="clear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInputLayoutPhoneNumber">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_margin="@dimen/standard_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInputLayoutComment"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>